# Aquamarine-UI-Framework

./: .gitignore  API_Portal.hpp  CMakeLists.txt  README.md  main.cpp
Dependencies/NecessaryFiles/: LogicHandler.cpp  LogicHandler.hpp  Renderer.cpp  Renderer.hpp  ShaderHandling.cpp  ShaderHandling.hpp  Text.cpp  Text.hpp  Window.cpp  Window.hpp  general_include.hpp
Dependencies/Shaders/: fragmentShader.glsl  textFragmentShader.glsl  textVertexShader.glsl  vertexShader.glsl
OptionalLibs/: Button.cpp  Button.hpp
